--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to Gamelynx, your ultimate destination for the latest gaming news, reviews, eSports, and updates. 
+      Join our community of gamers and stay ahead in the world of gaming."
+    />
+    <meta
+      name="keywords"
+      content="gaming, games, eSports, reviews, news, updates, community, gamers"
+    />
     <title>Gamelynx Home</title>
   </head>
   <body>
