Add favicon link to the homepage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       content="gaming, games, eSports, reviews, news, updates, community, gamers"
     />
     <title>Gamelynx Home</title>
+    <link rel="icon" href="/assets/images/rubik.png" />
   </head>
   <body>
     <main></main>
