Add hero section with navigation and welcome message to homepage

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
     <link rel="icon" href="/assets/images/rubik.png" />
   </head>
   <body>
-    <main></main>
+    <main>
+      <section id="hero">
+        <header>
+          <nav>
+            <ul>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Download</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </header>
+        <div>
+          <h1>🎮 Welcome to Gamelynx! 🌟</h1>
+          <p>
+            Level up your gaming experience with the latest games, news, and
+            epic adventures! 🚀 👾 Explore, connect, and conquer with our
+            amazing gaming community! 🕹️
+          </p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
