--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <ul>
               <li><a href="/index.html">Home</a></li>
               <li><a href="#">Blog</a></li>
+              <li><a href="#">YouTube</a></li>
               <li><a href="#">Download</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
