Remove search form from the header in index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
               <li><a href="#">Contact</a></li>
             </ul>
           </nav>
+          <!-- <form action="/search" method="get">
+            <input
+              type="text"
+              name="query"
+              placeholder="Search games..."
+              required
+            />
+            <button type="submit">🔍 Search</button>
+          </form> -->
         </header>
         <div>
           <h1>🎮 Welcome to Gamelynx! 🌟</h1>
