Add blog section with navigation and initial articles to mainblog.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <nav>
             <ul>
               <li><a href="/index.html">Home</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="/pages/blog/mainblog.html">Blog</a></li>
               <li><a href="#">YouTube</a></li>
               <li><a href="#">Download</a></li>
               <li><a href="#">Contact</a></li>
