Update search placeholder in mainblog.html; remove unused article-1.css and add new styles for download section

--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -3,17 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Welcome to the Download section of Gamelynx, your ultimate destination for the latest gaming news, reviews, eSports, and updates. 
-      Join our community of gamers and stay ahead in the world of gaming."
-    />
+    <meta name="description" content="Download your favorite games for free." />
     <meta
       name="keywords"
-      content="gaming, games, eSports, reviews, news, updates, community, gamers"
+      content="download games, free games, pc games, android games, ios games"
     />
     <meta name="author" content="Hasindu Udara" />
-    <title>Document</title>
+    <title>Gamelynx</title>
+    <link rel="icon" href="/assets/images/rubik.png" />
+    <link rel="stylesheet" href="/css/main-download.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section id="hero">
+        <header>
+          <h1>Gamelynx</h1>
+          <nav>
+            <a href="#">Home</a>
+            <a href="#">Blog</a>
+            <a href="#">YouTube</a>
+            <a href="#">Download</a>
+            <a href="#">Contact</a>
+          </nav>
+        </header>
+
+        <div class="search-bar">
+          <input type="text" placeholder="Search Your Game" />
+          <button>Search</button>
+        </div>
+      </section>
+
+      <section id="game-card">
+        <div class="game-list">
+          <div class="game-card">
+            <img
+              src="/assets/images/download images/gta v/gta 5 card.jpg"
+              alt="Grand Theft Auto V"
+            />
+            <h2>Grand Theft Auto V</h2>
+            <div class="download-section">
+              <img src="/assets/images/microsoft.png" alt="Windows" />
+              <button>Download</button>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="game-image.jpg" alt="Grand Theft Auto V" />
+            <h2>Grand Theft Auto V</h2>
+            <div class="download-section">
+              <img src="windows-icon.png" alt="Windows" />
+              <button>Download</button>
+            </div>
+          </div>
+          <div class="game-card">
+            <img src="game-image.jpg" alt="Grand Theft Auto V" />
+            <h2>Grand Theft Auto V</h2>
+            <div class="download-section">
+              <img src="windows-icon.png" alt="Windows" />
+              <button>Download</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
