--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="/pages/blog/mainblog.html">Blog</a></li>
               <li><a href="#">YouTube</a></li>
-              <li><a href="#">Download</a></li>
+              <li><a href="/pages/download/main-downlod.html">Download</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </nav>
