Fix image paths and update game titles in main-download.html

--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -37,7 +37,7 @@
         <div class="game-list">
           <div class="game-card">
             <img
-              src="/assets/images/download images/gta v/gta 5 card.jpg"
+              src="/assets/images/download images/gta v/gat 5 card.png"
               alt="Grand Theft Auto V"
             />
             <h2>Grand Theft Auto V</h2>
@@ -46,19 +46,27 @@
               <button>Download</button>
             </div>
           </div>
+
           <div class="game-card">
-            <img src="game-image.jpg" alt="Grand Theft Auto V" />
-            <h2>Grand Theft Auto V</h2>
+            <img
+              src="/assets/images/download images/Assassin's Creed Mirage/AC Mirage card.jpg"
+              alt="Grand Theft Auto V"
+            />
+            <h2>Assassin's Creed Mirage</h2>
             <div class="download-section">
-              <img src="windows-icon.png" alt="Windows" />
+              <img src="/assets/images/microsoft.png" alt="Windows" />
               <button>Download</button>
             </div>
           </div>
+
           <div class="game-card">
-            <img src="game-image.jpg" alt="Grand Theft Auto V" />
-            <h2>Grand Theft Auto V</h2>
+            <img
+              src="/assets/images/download images/far cry 6/far cry 6 card.jpg"
+              alt="Grand Theft Auto V"
+            />
+            <h2>Far Cry 6</h2>
             <div class="download-section">
-              <img src="windows-icon.png" alt="Windows" />
+              <img src="/assets/images/microsoft.png" alt="Windows" />
               <button>Download</button>
             </div>
           </div>
