--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -19,8 +19,8 @@
         <header>
           <h1>Gamelynx</h1>
           <nav>
-            <a href="#">Home</a>
-            <a href="#">Blog</a>
+            <a href="/index.html">Home</a>
+            <a href="/pages/blog/mainblog.html">Blog</a>
             <a href="#">YouTube</a>
             <a href="#">Download</a>
             <a href="#">Contact</a>
