Update game titles and add new game card for Forza Horizon 5 in main-download.html

--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -50,7 +50,7 @@
           <div class="game-card">
             <img
               src="/assets/images/download images/Assassin's Creed Mirage/AC Mirage card.jpg"
-              alt="Grand Theft Auto V"
+              alt="Assassin's Creed Mirage"
             />
             <h2>Assassin's Creed Mirage</h2>
             <div class="download-section">
@@ -62,9 +62,21 @@
           <div class="game-card">
             <img
               src="/assets/images/download images/far cry 6/far cry 6 card.jpg"
-              alt="Grand Theft Auto V"
+              alt="far cry 6"
             />
             <h2>Far Cry 6</h2>
+            <div class="download-section">
+              <img src="/assets/images/microsoft.png" alt="Windows" />
+              <button>Download</button>
+            </div>
+          </div>
+
+          <div class="game-card">
+            <img
+              src="/assets/images/download images/forza horizon 5/forza horizon 5 card.jpg"
+              alt="forza horizon 5"
+            />
+            <h2>Forza Horizon 5</h2>
             <div class="download-section">
               <img src="/assets/images/microsoft.png" alt="Windows" />
               <button>Download</button>
