Add download page for GTA 5 and update download button in main-download.html

--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -43,7 +43,11 @@
             <h2>Grand Theft Auto V</h2>
             <div class="download-section">
               <img src="/assets/images/microsoft.png" alt="Windows" />
-              <button>Download</button>
+              <a
+                href="/pages/download/download pages/gta-5.html"
+                target="_blank"
+                ><button>Download</button></a
+              >
             </div>
           </div>
 
