Add GTA 5 download page with system requirements and styling

--- a/pages/download/download pages/gta-5.html
+++ b/pages/download/download pages/gta-5.html
@@ -3,33 +3,76 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Download your favorite games for free." />
-    <meta
-      name="keywords"
-      content="download games, free games, pc games, android games, ios games"
-    />
-    <meta name="author" content="Hasindu Udara" />
+    <meta name="description" content="Free Download GAT 5 Game." />
+    <meta name="keywords" content="free download, gta 5" />
     <title>GTA 5 Download</title>
-    <link rel="icon" href="/assets/images/rubik.png" />
+    <link rel="stylesheet" href="/css/download css/gta-5-download.css" />
   </head>
   <body>
-    <main>
-      <section id="hero">
-        <header>
-          <h1>Gamelynx</h1>
-          <nav>
-            <a href="/index.html">Home</a>
-            <a href="/pages/blog/mainblog.html">Blog</a>
-            <a href="#">YouTube</a>
-            <a href="#">Download</a>
-            <a href="#">Contact</a>
-          </nav>
-        </header>
-        <div class="search-bar">
-          <input type="text" placeholder="Search Your Game" />
-          <button>Search</button>
-        </div>
-      </section>
-    </main>
+    <div class="container">
+      <h1>Grand Theft Auto V</h1>
+
+      <div class="image">
+        <img
+          src="/assets/images/download images/gta v/gta 5.jpg"
+          alt="gta 5 image"
+        />
+      </div>
+
+      <p>
+        Grand Theft Auto V (GTA 5), developed by Rockstar Games, is an
+        open-world action-adventure game that has captivated millions of players
+        worldwide since its release in 2013. Set in the sprawling, fictional
+        city of Los Santos and its surrounding areas, the game offers a gripping
+        narrative, immersive gameplay, and unparalleled freedom to explore a
+        richly detailed world.
+      </p>
+
+      <h2>Minimum System Requirements</h2>
+
+      <div class="requirements">
+        <table>
+          <tr>
+            <th>Component</th>
+            <th>Requirement</th>
+          </tr>
+          <tr>
+            <td><strong>OS:</strong></td>
+            <td>Windows 8.1/8/7 64 Bit</td>
+          </tr>
+          <tr>
+            <td><strong>Processor:</strong></td>
+            <td>Intel Core 2 Quad Q6600 / AMD Phenom 9850</td>
+          </tr>
+          <tr>
+            <td><strong>Memory:</strong></td>
+            <td>4GB RAM</td>
+          </tr>
+          <tr>
+            <td><strong>Graphics:</strong></td>
+            <td>NVIDIA 9800 GT / AMD HD 4870</td>
+          </tr>
+          <tr>
+            <td><strong>Storage:</strong></td>
+            <td>72GB available space</td>
+          </tr>
+          <tr>
+            <td><strong>Sound Card:</strong></td>
+            <td>DirectX 10 compatible</td>
+          </tr>
+        </table>
+      </div>
+
+      <p class="note">
+        Note: These are minimum requirements. Higher-end hardware is recommended
+        for optimal performance.
+      </p>
+
+      <p>
+        Whether you're a seasoned gamer or new to the series, GTA 5 promises an
+        unforgettable adventure filled with action, humor, and endless
+        possibilities.
+      </p>
+    </div>
   </body>
 </html>
