Add navigation bar and footer to GTA 5 download page with updated styling

--- a/pages/download/download pages/gta-5.html
+++ b/pages/download/download pages/gta-5.html
@@ -6,9 +6,19 @@
     <meta name="description" content="Free Download GAT 5 Game." />
     <meta name="keywords" content="free download, gta 5" />
     <title>GTA 5 Download</title>
+    <link rel="icon" href="/assets/images/rubik.png" />
     <link rel="stylesheet" href="/css/download css/gta-5-download.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/pages/blog/mainblog.html">Blog</a></li>
+        <li><a href="#">YouTube</a></li>
+        <li><a href="/pages/download/main-downlod.html">Download</a></li>
+        <li><a href="/pages/contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <div class="container">
       <h1>Grand Theft Auto V</h1>
 
@@ -73,6 +83,18 @@
         unforgettable adventure filled with action, humor, and endless
         possibilities.
       </p>
+
+      <div class="download">
+        <p id="download-btn-text">
+          Click the button below to download Grand Theft Auto V for free.
+        </p>
+        <a href="https://tinyurl.com/4b832hrk" class="btn" target="_blank">
+          <button>Download</button>
+        </a>
+      </div>
     </div>
+    <footer>
+      <p>&copy; 2025 Gamelynx. All rights reserved.</p>
+    </footer>
   </body>
 </html>
