--- a/index.html
+++ b/index.html
@@ -3,50 +3,91 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Welcome to Gamelynx, your ultimate destination for the latest gaming news, reviews, eSports, and updates. 
-      Join our community of gamers and stay ahead in the world of gaming."
-    />
-    <meta
-      name="keywords"
-      content="gaming, games, eSports, reviews, news, updates, community, gamers"
-    />
-    <title>Gamelynx Home</title>
-    <link rel="icon" href="/assets/images/rubik.png" />
+    <meta name="description" content="Ultimate Gaming Experience" />
+    <meta name="keywords" content="gaming, games, Gamelynx" />
+    <meta name="author" content="Hasindu Udara" />
+    <title>Gamelynx - Home</title>
+    <link rel="icon" href="/assets/images/rubik.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/home-page.css" />
   </head>
   <body>
-    <main>
-      <section id="hero">
-        <header>
-          <nav>
-            <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/pages/blog/mainblog.html">Blog</a></li>
-              <li><a href="#">YouTube</a></li>
-              <li><a href="/pages/download/main-downlod.html">Download</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </nav>
-          <!-- <form action="/search" method="get">
-            <input
-              type="text"
-              name="query"
-              placeholder="Search games..."
-              required
-            />
-            <button type="submit">🔍 Search</button>
-          </form> -->
-        </header>
-        <div>
-          <h1>🎮 Welcome to Gamelynx! 🌟</h1>
+    <nav class="navbar">
+      <div class="logo">Gamelynx</div>
+      <div class="nav-links">
+        <a href="#home">Home</a>
+        <a href="/pages/blog/mainblog.html">Blog</a>
+        <a href="#about">YouTube</a>
+        <a href="/pages/download/main-downlod.html">Download</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </nav>
+
+    <section class="hero" id="home">
+      <div class="hero-content">
+        <img
+          class="overlay-image"
+          src="/assets/images/index1.jpg"
+          alt="Hero Image"
+        />
+        <div class="image-text">
+          <h1>Welcome to the Future of Gaming</h1>
           <p>
-            Level up your gaming experience with the latest games, news, and
-            epic adventures! 🚀 👾 Explore, connect, and conquer with our
-            amazing gaming community! 🕹️
+            Experience next-level gaming with our premium collection of games
           </p>
+          <a href="/pages/blog/mainblog.html" target="_blank">
+            <button class="cta-button">Explore Games</button>
+          </a>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
+
+    <section class="featured-games" id="games">
+      <h2 class="section-title">Featured Games</h2>
+      <div class="games-grid">
+        <div class="game-card">
+          <img
+            src="/assets/images/index2.jpg"
+            alt="Game 1"
+            class="game-image"
+          />
+          <div class="game-info">
+            <h3 class="game-title">Cyber Adventure</h3>
+            <p>Enter a futuristic world full of challenges and excitement.</p>
+          </div>
+        </div>
+        <div class="game-card">
+          <img
+            src="/assets/images/index2.jpg"
+            alt="Game 2"
+            class="game-image"
+          />
+          <div class="game-info">
+            <h3 class="game-title">Space Warriors</h3>
+            <p>Battle across galaxies in this epic space adventure.</p>
+          </div>
+        </div>
+        <div class="game-card">
+          <img
+            src="https://images.unsplash.com/photo-1551103782-8ab07afd45c1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+            alt="Game 3"
+            class="game-image"
+          />
+          <div class="game-info">
+            <h3 class="game-title">Dragon Quest</h3>
+            <p>Embark on a magical journey through mythical lands.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="social-links">
+        <a href="#">Facebook</a>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+        <a href="#">Discord</a>
+      </div>
+      <p>&copy; 2023 Gamelynx. All rights reserved.</p>
+    </footer>
   </body>
 </html>
