Refactor navigation bar styling and structure across multiple pages for consistency

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="logo">Gamelynx</div>
       <div class="nav-links">
-        <a href="#home">Home</a>
+        <a href="/index.html">Home</a>
         <a href="/pages/blog/mainblog.html">Blog</a>
         <a href="#about">YouTube</a>
         <a href="/pages/download/main-downlod.html">Download</a>
@@ -42,39 +42,43 @@
     </section>
 
     <section class="featured-games" id="games">
-      <h2 class="section-title">Featured Games</h2>
+      <h2 class="section-title">Download Games</h2>
       <div class="games-grid">
         <div class="game-card">
           <img
-            src="/assets/images/index2.jpg"
+            src="/assets/images/download images/gta v/gta 5.jpg"
             alt="Game 1"
             class="game-image"
           />
           <div class="game-info">
-            <h3 class="game-title">Cyber Adventure</h3>
-            <p>Enter a futuristic world full of challenges and excitement.</p>
+            <h3 class="game-title">GTA 5</h3>
+            <p>
+              Open-world action-adventure game with crime, chaos, and endless
+              possibilities.
+            </p>
           </div>
         </div>
+
         <div class="game-card">
           <img
-            src="/assets/images/index2.jpg"
+            src="/assets/images/download images/Assassin's Creed Mirage/AC Mirage card.jpg"
             alt="Game 2"
             class="game-image"
           />
           <div class="game-info">
-            <h3 class="game-title">Space Warriors</h3>
-            <p>Battle across galaxies in this epic space adventure.</p>
+            <h3 class="game-title">Assassin's Creed Mirage</h3>
+            <p>Return to stealth roots in ancient Baghdad as assassin Basim.</p>
           </div>
         </div>
         <div class="game-card">
           <img
-            src="https://images.unsplash.com/photo-1551103782-8ab07afd45c1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+            src="/assets/images/download images/far cry 6/far cry 6 card.jpg"
             alt="Game 3"
             class="game-image"
           />
           <div class="game-info">
-            <h3 class="game-title">Dragon Quest</h3>
-            <p>Embark on a magical journey through mythical lands.</p>
+            <h3 class="game-title">Far Cry 6</h3>
+            <p>Open-world action shooter set in a tropical revolution.</p>
           </div>
         </div>
       </div>
