Add footer with social links and update styling across multiple pages

--- a/index.html
+++ b/index.html
@@ -11,87 +11,93 @@
     <link rel="stylesheet" href="/css/home-page.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo">Gamelynx</div>
-      <div class="nav-links">
-        <a href="/index.html">Home</a>
-        <a href="/pages/blog/mainblog.html">Blog</a>
-        <a href="#about">YouTube</a>
-        <a href="/pages/download/main-downlod.html">Download</a>
-        <a href="#contact">Contact</a>
-      </div>
-    </nav>
-
-    <section class="hero" id="home">
-      <div class="hero-content">
-        <img
-          class="overlay-image"
-          src="/assets/images/index1.jpg"
-          alt="Hero Image"
-        />
-        <div class="image-text">
-          <h1>Welcome to the Future of Gaming</h1>
-          <p>
-            Experience next-level gaming with our premium collection of games
-          </p>
-          <a href="/pages/blog/mainblog.html" target="_blank">
-            <button class="cta-button">Explore Games</button>
-          </a>
+    <main>
+      <nav class="navbar">
+        <div class="logo">Gamelynx</div>
+        <div class="nav-links">
+          <a href="/index.html">Home</a>
+          <a href="/pages/blog/mainblog.html">Blog</a>
+          <a href="#about">YouTube</a>
+          <a href="/pages/download/main-downlod.html">Download</a>
+          <a href="#contact">Contact</a>
         </div>
-      </div>
-    </section>
+      </nav>
 
-    <section class="featured-games" id="games">
-      <h2 class="section-title">Download Games</h2>
-      <div class="games-grid">
-        <div class="game-card">
+      <section class="hero" id="home">
+        <div class="hero-content">
           <img
-            src="/assets/images/download images/gta v/gta 5.jpg"
-            alt="Game 1"
-            class="game-image"
+            class="overlay-image"
+            src="/assets/images/index1.jpg"
+            alt="Hero Image"
           />
-          <div class="game-info">
-            <h3 class="game-title">GTA 5</h3>
+          <div class="image-text">
+            <h1>Welcome to the Future of Gaming</h1>
             <p>
-              Open-world action-adventure game with crime, chaos, and endless
-              possibilities.
+              Experience next-level gaming with our premium collection of games
             </p>
+            <a href="/pages/blog/mainblog.html" target="_blank">
+              <button class="cta-button">Explore Games</button>
+            </a>
           </div>
         </div>
+      </section>
 
-        <div class="game-card">
-          <img
-            src="/assets/images/download images/Assassin's Creed Mirage/AC Mirage card.jpg"
-            alt="Game 2"
-            class="game-image"
-          />
-          <div class="game-info">
-            <h3 class="game-title">Assassin's Creed Mirage</h3>
-            <p>Return to stealth roots in ancient Baghdad as assassin Basim.</p>
+      <section class="featured-games" id="games">
+        <h2 class="section-title">Download Games</h2>
+        <div class="games-grid">
+          <div class="game-card">
+            <img
+              src="/assets/images/download images/gta v/gta 5.jpg"
+              alt="Game 1"
+              class="game-image"
+            />
+            <div class="game-info">
+              <h3 class="game-title">GTA 5</h3>
+              <p>
+                Open-world action-adventure game with crime, chaos, and endless
+                possibilities.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="game-card">
-          <img
-            src="/assets/images/download images/far cry 6/far cry 6 card.jpg"
-            alt="Game 3"
-            class="game-image"
-          />
-          <div class="game-info">
-            <h3 class="game-title">Far Cry 6</h3>
-            <p>Open-world action shooter set in a tropical revolution.</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <footer>
-      <div class="social-links">
-        <a href="#">Facebook</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
-        <a href="#">Discord</a>
-      </div>
-      <p>&copy; 2023 Gamelynx. All rights reserved.</p>
-    </footer>
+          <div class="game-card">
+            <img
+              src="/assets/images/download images/Assassin's Creed Mirage/AC Mirage card.jpg"
+              alt="Game 2"
+              class="game-image"
+            />
+            <div class="game-info">
+              <h3 class="game-title">Assassin's Creed Mirage</h3>
+              <p>
+                Return to stealth roots in ancient Baghdad as assassin Basim.
+              </p>
+            </div>
+          </div>
+          <div class="game-card">
+            <img
+              src="/assets/images/download images/far cry 6/far cry 6 card.jpg"
+              alt="Game 3"
+              class="game-image"
+            />
+            <div class="game-info">
+              <h3 class="game-title">Far Cry 6</h3>
+              <p>Open-world action shooter set in a tropical revolution.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <div class="social-links">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="https://youtube.com/@storylinegaming2002" target="_blank"
+            >YouTube</a
+          >
+          <a href="#">Discord</a>
+        </div>
+        <p>&copy; 2025 Gamelynx. All rights reserved.</p>
+      </footer>
+    </main>
   </body>
 </html>
