--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -96,6 +96,18 @@
           </div>
         </div>
       </section>
+
+      <footer>
+        <div class="social-links">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="https://youtube.com/@storylinegaming2002" target="_blank"
+            >YouTube</a
+          >
+          <a href="#">Discord</a>
+        </div>
+        <p>&copy; 2025 Gamelynx. All rights reserved.</p>
+      </footer>
     </main>
   </body>
 </html>
