--- a/pages/download/download pages/gta-5.html
+++ b/pages/download/download pages/gta-5.html
@@ -10,94 +10,105 @@
     <link rel="stylesheet" href="/css/download css/gta-5-download.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <div class="logo">Gamelynx</div>
-        <div class="nav-links">
-          <a href="/index.html">Home</a>
-          <a href="/pages/blog/mainblog.html">Blog</a>
-          <a href="#about">YouTube</a>
-          <a href="/pages/download/main-downlod.html">Download</a>
-          <a href="#contact">Contact</a>
+    <main>
+      <header>
+        <nav class="navbar">
+          <div class="logo">Gamelynx</div>
+          <div class="nav-links">
+            <a href="/index.html">Home</a>
+            <a href="/pages/blog/mainblog.html">Blog</a>
+            <a href="#about">YouTube</a>
+            <a href="/pages/download/main-downlod.html">Download</a>
+            <a href="#contact">Contact</a>
+          </div>
+        </nav>
+      </header>
+      <div class="container">
+        <h1>Grand Theft Auto V</h1>
+
+        <div class="image">
+          <img
+            src="/assets/images/download images/gta v/gta 5.jpg"
+            alt="gta 5 image"
+          />
         </div>
-      </nav>
-    </header>
-    <div class="container">
-      <h1>Grand Theft Auto V</h1>
 
-      <div class="image">
-        <img
-          src="/assets/images/download images/gta v/gta 5.jpg"
-          alt="gta 5 image"
-        />
-      </div>
-
-      <p>
-        Grand Theft Auto V (GTA 5), developed by Rockstar Games, is an
-        open-world action-adventure game that has captivated millions of players
-        worldwide since its release in 2013. Set in the sprawling, fictional
-        city of Los Santos and its surrounding areas, the game offers a gripping
-        narrative, immersive gameplay, and unparalleled freedom to explore a
-        richly detailed world.
-      </p>
-
-      <h2>Minimum System Requirements</h2>
-
-      <div class="requirements">
-        <table>
-          <tr>
-            <th>Component</th>
-            <th>Requirement</th>
-          </tr>
-          <tr>
-            <td><strong>OS:</strong></td>
-            <td>Windows 8.1/8/7 64 Bit</td>
-          </tr>
-          <tr>
-            <td><strong>Processor:</strong></td>
-            <td>Intel Core 2 Quad Q6600 / AMD Phenom 9850</td>
-          </tr>
-          <tr>
-            <td><strong>Memory:</strong></td>
-            <td>4GB RAM</td>
-          </tr>
-          <tr>
-            <td><strong>Graphics:</strong></td>
-            <td>NVIDIA 9800 GT / AMD HD 4870</td>
-          </tr>
-          <tr>
-            <td><strong>Storage:</strong></td>
-            <td>72GB available space</td>
-          </tr>
-          <tr>
-            <td><strong>Sound Card:</strong></td>
-            <td>DirectX 10 compatible</td>
-          </tr>
-        </table>
-      </div>
-
-      <p class="note">
-        Note: These are minimum requirements. Higher-end hardware is recommended
-        for optimal performance.
-      </p>
-
-      <p>
-        Whether you're a seasoned gamer or new to the series, GTA 5 promises an
-        unforgettable adventure filled with action, humor, and endless
-        possibilities.
-      </p>
-
-      <div class="download">
-        <p id="download-btn-text">
-          Click the button below to download Grand Theft Auto V for free.
+        <p>
+          Grand Theft Auto V (GTA 5), developed by Rockstar Games, is an
+          open-world action-adventure game that has captivated millions of
+          players worldwide since its release in 2013. Set in the sprawling,
+          fictional city of Los Santos and its surrounding areas, the game
+          offers a gripping narrative, immersive gameplay, and unparalleled
+          freedom to explore a richly detailed world.
         </p>
-        <a href="https://tinyurl.com/4b832hrk" class="btn" target="_blank">
-          <button>Download</button>
-        </a>
+
+        <h2>Minimum System Requirements</h2>
+
+        <div class="requirements">
+          <table>
+            <tr>
+              <th>Component</th>
+              <th>Requirement</th>
+            </tr>
+            <tr>
+              <td><strong>OS:</strong></td>
+              <td>Windows 8.1/8/7 64 Bit</td>
+            </tr>
+            <tr>
+              <td><strong>Processor:</strong></td>
+              <td>Intel Core 2 Quad Q6600 / AMD Phenom 9850</td>
+            </tr>
+            <tr>
+              <td><strong>Memory:</strong></td>
+              <td>4GB RAM</td>
+            </tr>
+            <tr>
+              <td><strong>Graphics:</strong></td>
+              <td>NVIDIA 9800 GT / AMD HD 4870</td>
+            </tr>
+            <tr>
+              <td><strong>Storage:</strong></td>
+              <td>72GB available space</td>
+            </tr>
+            <tr>
+              <td><strong>Sound Card:</strong></td>
+              <td>DirectX 10 compatible</td>
+            </tr>
+          </table>
+        </div>
+
+        <p class="note">
+          Note: These are minimum requirements. Higher-end hardware is
+          recommended for optimal performance.
+        </p>
+
+        <p>
+          Whether you're a seasoned gamer or new to the series, GTA 5 promises
+          an unforgettable adventure filled with action, humor, and endless
+          possibilities.
+        </p>
+
+        <div class="download">
+          <p id="download-btn-text">
+            Click the button below to download Grand Theft Auto V for free.
+          </p>
+          <a href="https://tinyurl.com/4b832hrk" class="btn" target="_blank">
+            <button>Download</button>
+          </a>
+        </div>
       </div>
-    </div>
-    <footer>
-      <p>&copy; 2025 Gamelynx. All rights reserved.</p>
-    </footer>
+
+      <footer>
+        <div class="social-links">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="https://youtube.com/@storylinegaming2002" target="_blank"
+            >YouTube</a
+          >
+          <a href="#">Discord</a>
+        </div>
+        <p>&copy; 2025 Gamelynx. All rights reserved.</p>
+      </footer>
+    </main>
   </body>
 </html>
