Add contact page with layout, styling, and form functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="gaming, games, Gamelynx" />
     <meta name="author" content="Hasindu Udara" />
     <title>Gamelynx - Home</title>
-    <link rel="icon" href="/assets/images/rubik.png" type="image/x-icon" />
+    <link rel="icon" href="/assets/images/rubik.png" />
     <link rel="stylesheet" href="/css/home-page.css" />
   </head>
   <body>
