Update contact page layout, styling, and navigation links for consistency

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,85 +10,96 @@
     <link rel="stylesheet" href="/css/contact.css" />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <nav class="navbar">
-          <div class="logo">Gamelynx</div>
-          <div class="nav-links">
-            <a href="/index.html">Home</a>
-            <a href="/pages/blog/mainblog.html">Blog</a>
-            <a href="#about">YouTube</a>
-            <a href="/pages/download/main-downlod.html">Download</a>
-            <a href="#contact">Contact</a>
+    <main>
+      <header>
+        <div class="container">
+          <nav class="navbar">
+            <div class="logo">Gamelynx</div>
+            <div class="nav-links">
+              <a href="/index.html">Home</a>
+              <a href="/pages/blog/mainblog.html">Blog</a>
+              <a href="#about">YouTube</a>
+              <a href="/pages/download/main-downlod.html">Download</a>
+              <a href="/pages/contact.html">Contact</a>
+            </div>
+          </nav>
+        </div>
+      </header>
+
+      <section id="home" class="hero">
+        <div class="container">
+          <h2>Discover Something New</h2>
+          <p>
+            This is a simple webpage to showcase content using HTML and CSS.
+          </p>
+          <a href="#about" class="btn">Learn More</a>
+        </div>
+      </section>
+
+      <section id="about" class="about">
+        <div class="container">
+          <h2>About Us</h2>
+          <p>
+            We are a team of passionate individuals dedicated to creating
+            amazing web experiences.
+          </p>
+        </div>
+      </section>
+
+      <section id="services" class="services">
+        <div class="container">
+          <h2>Our Services</h2>
+          <div class="service-item">
+            <h3>Web Design</h3>
+            <p>
+              We create beautiful and responsive websites tailored to your
+              needs.
+            </p>
           </div>
-        </nav>
-      </div>
-    </header>
-
-    <section id="home" class="hero">
-      <div class="container">
-        <h2>Discover Something New</h2>
-        <p>This is a simple webpage to showcase content using HTML and CSS.</p>
-        <a href="#about" class="btn">Learn More</a>
-      </div>
-    </section>
-
-    <section id="about" class="about">
-      <div class="container">
-        <h2>About Us</h2>
-        <p>
-          We are a team of passionate individuals dedicated to creating amazing
-          web experiences.
-        </p>
-      </div>
-    </section>
-
-    <section id="services" class="services">
-      <div class="container">
-        <h2>Our Services</h2>
-        <div class="service-item">
-          <h3>Web Design</h3>
-          <p>
-            We create beautiful and responsive websites tailored to your needs.
-          </p>
+          <div class="service-item">
+            <h3>SEO Optimization</h3>
+            <p>
+              Improve your website's visibility on search engines with our SEO
+              services.
+            </p>
+          </div>
+          <div class="service-item">
+            <h3>Content Creation</h3>
+            <p>
+              Engage your audience with high-quality content crafted by our
+              experts.
+            </p>
+          </div>
         </div>
-        <div class="service-item">
-          <h3>SEO Optimization</h3>
-          <p>
-            Improve your website's visibility on search engines with our SEO
-            services.
-          </p>
-        </div>
-        <div class="service-item">
-          <h3>Content Creation</h3>
-          <p>
-            Engage your audience with high-quality content crafted by our
-            experts.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="contact" class="contact">
-      <div class="container">
-        <h2>Contact Us</h2>
-        <p>Have questions? Reach out to us!</p>
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-          <button type="submit" class="btn">Send Message</button>
-        </form>
-      </div>
-    </section>
+      <section id="contact" class="contact">
+        <div class="container">
+          <h2>Contact Us</h2>
+          <p>Have questions? Reach out to us!</p>
+          <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required />
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+            <button type="submit" class="btn">Send Message</button>
+          </form>
+        </div>
+      </section>
 
-    <footer>
-      <div class="container">
-        <p>&copy; 2023 My Webpage. All rights reserved.</p>
-      </div>
-    </footer>
+      <footer>
+        <div class="social-links">
+          <a href="#">Facebook</a>
+          <a href="#">Twitter</a>
+          <a href="https://youtube.com/@storylinegaming2002" target="_blank"
+            >YouTube</a
+          >
+          <a href="#">Discord</a>
+        </div>
+        <p>&copy; 2025 Gamelynx. All rights reserved.</p>
+      </footer>
+    </main>
   </body>
 </html>
