--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="/pages/blog/mainblog.html">Blog</a>
           <a href="#about">YouTube</a>
           <a href="/pages/download/main-downlod.html">Download</a>
-          <a href="#contact">Contact</a>
+          <a href="/pages/contact.html">Contact</a>
         </div>
       </nav>
 
