--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,6 @@
           <p>
             This is a simple webpage to showcase content using HTML and CSS.
           </p>
-          <a href="#about" class="btn">Learn More</a>
         </div>
       </section>
 
@@ -40,36 +39,8 @@
         <div class="container">
           <h2>About Us</h2>
           <p>
-            We are a team of passionate individuals dedicated to creating
-            amazing web experiences.
+            Welcome to Gamelynx! We are a gaming company that provides the best
           </p>
-        </div>
-      </section>
-
-      <section id="services" class="services">
-        <div class="container">
-          <h2>Our Services</h2>
-          <div class="service-item">
-            <h3>Web Design</h3>
-            <p>
-              We create beautiful and responsive websites tailored to your
-              needs.
-            </p>
-          </div>
-          <div class="service-item">
-            <h3>SEO Optimization</h3>
-            <p>
-              Improve your website's visibility on search engines with our SEO
-              services.
-            </p>
-          </div>
-          <div class="service-item">
-            <h3>Content Creation</h3>
-            <p>
-              Engage your audience with high-quality content crafted by our
-              experts.
-            </p>
-          </div>
         </div>
       </section>
 
