Refactor contact page styles and update "About Us" section content for improved clarity and aesthetics

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,20 +26,12 @@
         </div>
       </header>
 
-      <section id="home" class="hero">
-        <div class="container">
-          <h2>Discover Something New</h2>
-          <p>
-            This is a simple webpage to showcase content using HTML and CSS.
-          </p>
-        </div>
-      </section>
-
       <section id="about" class="about">
         <div class="container">
           <h2>About Us</h2>
           <p>
-            Welcome to Gamelynx! We are a gaming company that provides the best
+            Welcome to Gamelynx! Experience next-level gaming with our premium
+            collection of games.
           </p>
         </div>
       </section>
