Add ACM download page and update navigation links for consistency

--- a/pages/download/download pages/ACM.html
+++ b/pages/download/download pages/ACM.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Free Download GAT 5 Game." />
     <meta name="keywords" content="free download, gta 5" />
-    <title>GTA 5 Download</title>
+    <title>Assassin's Creed Mirage - Download</title>
     <link rel="icon" href="/assets/images/rubik.png" />
     <link rel="stylesheet" href="/css/download css/gta-5-download.css" />
   </head>
@@ -24,22 +24,18 @@
         </nav>
       </header>
       <div class="container">
-        <h1>Grand Theft Auto V</h1>
+        <h1>Assassin's Creed Mirage (2023)</h1>
 
         <div class="image">
-          <img
-            src="/assets/images/download images/gta v/gta 5.jpg"
-            alt="gta 5 image"
-          />
+          <img src="/assets/images/article images/acm.png" alt="gta 5 image" />
         </div>
 
         <p>
-          Grand Theft Auto V (GTA 5), developed by Rockstar Games, is an
-          open-world action-adventure game that has captivated millions of
-          players worldwide since its release in 2013. Set in the sprawling,
-          fictional city of Los Santos and its surrounding areas, the game
-          offers a gripping narrative, immersive gameplay, and unparalleled
-          freedom to explore a richly detailed world.
+          Assassin's Creed Mirage is an action-adventure game by Ubisoft set in
+          9th-century Baghdad. It follows Basim Ibn Ishaq, a street thief who
+          joins the Hidden Ones. Returning to classic stealth gameplay, it
+          features parkour, assassinations, and immersive storytelling, offering
+          a nostalgic yet fresh experience.
         </p>
 
         <h2>Minimum System Requirements</h2>
@@ -52,27 +48,27 @@
             </tr>
             <tr>
               <td><strong>OS:</strong></td>
-              <td>Windows 8.1/8/7 64 Bit</td>
+              <td>Windows 10 (64-bit)</td>
             </tr>
             <tr>
               <td><strong>Processor:</strong></td>
-              <td>Intel Core 2 Quad Q6600 / AMD Phenom 9850</td>
+              <td>Intel Core i5-8400 or AMD Ryzen 3 3300X</td>
             </tr>
             <tr>
               <td><strong>Memory:</strong></td>
-              <td>4GB RAM</td>
+              <td>8 GB RAM</td>
             </tr>
             <tr>
               <td><strong>Graphics:</strong></td>
-              <td>NVIDIA 9800 GT / AMD HD 4870</td>
+              <td>NVIDIA GeForce GTX 1060 (6GB) or AMD Radeon RX 580 (8GB)</td>
             </tr>
             <tr>
               <td><strong>Storage:</strong></td>
-              <td>72GB available space</td>
+              <td>50 GB available space</td>
             </tr>
             <tr>
               <td><strong>Sound Card:</strong></td>
-              <td>DirectX 10 compatible</td>
+              <td>DirectX 12 compatible</td>
             </tr>
           </table>
         </div>
@@ -83,16 +79,16 @@
         </p>
 
         <p>
-          Whether you're a seasoned gamer or new to the series, GTA 5 promises
-          an unforgettable adventure filled with action, humor, and endless
-          possibilities.
+          Whether you're a seasoned gamer or new to the series, Assassin's Creed
+          Mirage promises an unforgettable adventure filled with action, humor,
+          and endless possibilities.
         </p>
 
         <div class="download">
           <p id="download-btn-text">
-            Click the button below to download Grand Theft Auto V for free.
+            Click the button below to download Assassin's Creed Mirage for free.
           </p>
-          <a href="https://tinyurl.com/4b832hrk" class="btn" target="_blank">
+          <a href="https://tinyurl.com/3stbfn7b" class="btn" target="_blank">
             <button>Download</button>
           </a>
         </div>
