Update publication date for ACM article and enhance download page structure

--- a/pages/download/main-download.html
+++ b/pages/download/main-download.html
@@ -23,7 +23,7 @@
               <a href="/index.html">Home</a>
               <a href="/pages/blog/mainblog.html">Blog</a>
               <a href="#about">YouTube</a>
-              <a href="/pages/download/main-downlod.html">Download</a>
+              <a href="/pages/download/main-download.html">Download</a>
               <a href="/pages/contact.html">Contact</a>
             </div>
           </nav>
@@ -40,7 +40,6 @@
             </form>
           </div>
         </header>
-      </section>
 
       <section id="game-card">
         <div class="game-list">
@@ -68,7 +67,9 @@
             <h2>Assassin's Creed Mirage</h2>
             <div class="download-section">
               <img src="/assets/images/microsoft.png" alt="Windows" />
-              <a href="/pages/download/download pages/ACM.html" target="_blank"
+              <a
+                href="/pages/download/download pages/ACM.html"
+                target="_blank"
                 ><button>Download</button></a
               >
             </div>
