--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -53,7 +53,7 @@
             <div class="download-section">
               <img src="/assets/images/microsoft.png" alt="Windows" />
               <a
-                href="/pages/download/download pages/gta-5.html"
+                href="/pages/download/download pages/gta-5-download.html"
                 target="_blank"
                 ><button>Download</button></a
               >
@@ -68,7 +68,9 @@
             <h2>Assassin's Creed Mirage</h2>
             <div class="download-section">
               <img src="/assets/images/microsoft.png" alt="Windows" />
-              <a href="/pages/download/download pages/ACM.html" target="_blank"
+              <a
+                href="/pages/download/download pages/ACM-dwonload.html"
+                target="_blank"
                 ><button>Download</button></a
               >
             </div>
@@ -82,7 +84,11 @@
             <h2>Far Cry 6</h2>
             <div class="download-section">
               <img src="/assets/images/microsoft.png" alt="Windows" />
-              <button>Download</button>
+              <a
+                href="/pages/download/download pages/far-cry-6-download.html"
+                target="_blank"
+                ><button>Download</button></a
+              >
             </div>
           </div>
 
