Add Far Cry 6 download page and associated styling; update ACM image path

--- a/pages/download/download pages/ACM-dwonload.html
+++ b/pages/download/download pages/ACM-dwonload.html
@@ -27,7 +27,10 @@
         <h1>Assassin's Creed Mirage (2023)</h1>
 
         <div class="image">
-          <img src="/assets/images/article images/acm.png" alt="gta 5 image" />
+          <img
+            src="/assets/images/download images/Assassin's Creed Mirage/acm.png"
+            alt="gta 5 image"
+          />
         </div>
 
         <p>
