Update Forza Horizon 5 download page image source

--- a/pages/download/download pages/forza-horizon-5-download.html
+++ b/pages/download/download pages/forza-horizon-5-download.html
@@ -28,7 +28,7 @@
 
         <div class="image">
           <img
-            src="/assets/images/download images/far cry 6/far cry 6.jpg"
+            src="/assets/images/download images/forza horizon 5/Forza Horizon 5.jpg"
             alt="gta 5 image"
           />
         </div>
