Update Forza Horizon 5 download button to link to the dedicated download page

--- a/pages/download/main-downlod.html
+++ b/pages/download/main-downlod.html
@@ -100,7 +100,11 @@
             <h2>Forza Horizon 5</h2>
             <div class="download-section">
               <img src="/assets/images/microsoft.png" alt="Windows" />
-              <button>Download</button>
+              <a
+                href="/pages/download/download pages/forza-horizon-5-download.html"
+                target="_blank"
+                ><button>Download</button></a
+              >
             </div>
           </div>
         </div>
