Update GTA V download page title to include release year

--- a/pages/download/download pages/gta-5-download.html
+++ b/pages/download/download pages/gta-5-download.html
@@ -24,7 +24,7 @@
         </nav>
       </header>
       <div class="container">
-        <h1>Grand Theft Auto V</h1>
+        <h1>Grand Theft Auto V (2013)</h1>
 
         <div class="image">
           <img
