Add Forza Horizon 5 download page with custom styles

--- a/pages/download/download pages/forza-horizon-5-download.html
+++ b/pages/download/download pages/forza-horizon-5-download.html
@@ -7,7 +7,10 @@
     <meta name="keywords" content="free download, far cry 6" />
     <title>Forza Horizon 5 - Download</title>
     <link rel="icon" href="/assets/images/rubik.png" />
-    <link rel="stylesheet" href="/css/download css/far-cry-6-download.css" />
+    <link
+      rel="stylesheet"
+      href="/css/download css/forza-horizon-5-download.css"
+    />
   </head>
   <body>
     <main>
